--- a/.github/workflows/commitSnake.yml
+++ b/.github/workflows/commitSnake.yml
@@ -33,10 +33,10 @@ jobs:
             assets/github-snake-dark.svg?palette=github-dark
             assets/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
-      # 使用 EndBug/add-and-commit 提交代码, see: https://github.com/EndBug/add-and-commit
-      - name: Push to GitHub
-        uses: EndBug/add-and-commit@v9
-        with:
-          branch: main
-          default_author: github_actions
-          message: 'Generate Contribution Snake'
+#       # 使用 EndBug/add-and-commit 提交代码, see: https://github.com/EndBug/add-and-commit
+#       - name: Push to GitHub
+#         uses: EndBug/add-and-commit@v9
+#         with:
+#           branch: main
+#           default_author: github_actions
+#           message: 'Generate Contribution Snake'
