--- a/.github/workflows/commitSnake.yml
+++ b/.github/workflows/commitSnake.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Generate Snake
         uses: Platane/snk@v2
         with:
-          github_user_name: supercpq
+          github_user_name:  ${{ github.repository_owner }}
           outputs: |
             assets/github-snake.svg
             assets/github-snake-dark.svg?palette=github-dark
