--- a/.github/workflows/commitSnake.yml
+++ b/.github/workflows/commitSnake.yml
@@ -1,41 +1,41 @@
-name: generate animation
+# 创建 Snake, see: https://github.com/Platane/snk
 
+# 工作流名称
+name: Generate Snake
+
+# 工作流触发时机, see: https://docs.github.com/zh/actions/using-workflows/triggering-a-workflow
+# 触发条件修改为: 当 main 分支有 push 操作 || 每天 0 点
 on:
-  # run automatically every 24 hours
-  schedule:
-    - cron: "0 */24 * * *" 
-  
-  # allows to manually run the job at any time
-  workflow_dispatch:
-  
-  # run on every push on the master branch
   push:
-    branches:
-    - master
-    
-  
+    branches: 
+      - main  
 
+  schedule:
+    - cron:  "0 0 * * *" 
+
+# 作业, see: https://docs.github.com/zh/actions/using-jobs/using-jobs-in-a-workflow
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-    
+
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v2
+      # 使用 actions/checkout, see: https://github.com/actions/checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # 使用 Platane/snk 生成图片, see: https://github.com/Platane/snk
+      - name: Generate Snake
+        uses: Platane/snk@v2
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             assets/github-snake.svg
             assets/github-snake-dark.svg?palette=github-dark
             assets/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      # 使用 EndBug/add-and-commit 提交代码, see: https://github.com/EndBug/add-and-commit
+      - name: Push to GitHub
+        uses: EndBug/add-and-commit@v9
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
+          default_author: github_actions
+          message: 'Generate Contribution Snake'
